workloads/bootstrap/manifest/networkpolicies.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: bootstrap
  namespace: bootstrap
  labels:
    app.kubernetes.io/name: bootstrap
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: bootstrap
  egress:
  - toPorts:
    - ports:
      - port: "5000"
    toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": docker-registry
        app.kubernetes.io/name: docker-registry
        app.kubernetes.io/component: distribution
  - toPorts:
    - ports:
      - port: "5001"
    toEndpoints:
    - matchLabels:
        "k8s:io.kubernetes.pod.namespace": docker-registry
        app.kubernetes.io/name: docker-registry
        app.kubernetes.io/component: auth
